--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Закрывающий тег</title>
+    <link rel="icon" href="./images/favicon.ico" sizes="any" />
+    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="./images/favicon.png" />
     <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./styles/variables.css" />
     <link rel="stylesheet" href="./styles/globals.css" />
@@ -11,8 +14,101 @@
     <link rel="stylesheet" href="./styles/animations.css" />
   </head>
   <body class="page">
-    <header class="header"></header>
-    <main></main>
+    <header class="header">
+      <a class="header_logo">&lt/HTML&gt</a>
+      <h1 class="header_title">закрывающий тег</h1>
+    </header>
+
+    <main class="main">
+      <article>
+        <h2>Фритрек и нулевой спринт: Подготовка к работе</h2>
+        <img src="./images/trailer.png" />
+        <p>
+          Это было самое начало пути. На этом этапе важно было проникнуться
+          основами и настроиться на учёбу. И, возможно, подумать, как новые
+          знания могут повлиять на ваше будущее.
+        </p>
+        <p>тут надо что то расскащзать</p>
+        <button class="card__icon-button">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="39"
+            height="36"
+            fill="none"
+            viewBox="0 0 39 36"
+            class="like-icon is-liked"
+          >
+            <g clip-path="url(#a)">
+              <path
+                fill="#000"
+                d="M12 6H9v3h3zm3 0h-3v3h3zM9 9H6v3h3zm0 3H6v3h3zm0 3H6v3h3zm9-9h-3v3h3zm-6 12H9v3h3zm3 3h-3v3h3zm3 3h-3v3h3zm9-18h3v3h-3zm-3 0h3v3h-3zm6 3h3v3h-3zm0 3h3v3h-3zm0 3h3v3h-3zm-9-9h3v3h-3zm6 12h3v3h-3zm-3 3h3v3h-3zm-3 3h3v3h-3zm0 3h-3v3h3zm0-18h-3v3h3z"
+              />
+              <path
+                fill="red"
+                d="M12 9H9v3h3zm3 3h-3v3h3zm3-3h-3v3h3zm-6 6H9v3h3zm3 0h-3v3h3zm0 3h-3v3h3zm3-6h-3v3h3zm0 9h-3v3h3zm0-3h-3v3h3zm9-9h3v3h-3zm-3 0h3v3h-3zm3 3h3v3h-3zm-3 0h3v3h-3zm-3-3h3v3h-3zm6 6h3v3h-3zm-3 0h3v3h-3zm0 3h3v3h-3zm-3-6h3v3h-3zm0 9h3v3h-3zm0-3h3v3h-3zm0 3h-3v3h3zm0 3h-3v3h3z"
+              />
+              <path
+                fill="#fff"
+                d="M18 15h-3v3h3zm3 0h3v3h-3zm0 0h-3v3h3zm0-3h-3v3h3zm0 6h-3v3h3z"
+              />
+              <path
+                fill="red"
+                d="M36 13h3v3h-3zm-9 14h3v3h-3zm-9 6h3v3h-3zm-9-6h3v3H9zM24 0h3v3h-3zm9 3h3v3h-3zM3 3h3v3H3zm9-3h3v3h-3zM0 13h3v3H0z"
+              />
+            </g>
+            <defs>
+              <clipPath id="a">
+                <path fill="#fff" d="M0 0h39v36H0z" />
+              </clipPath>
+            </defs>
+          </svg>
+          <span class="card__like-button button__text">like</span>
+        </button>
+      </article>
+      <article>
+        <h2></h2>
+        <img src="./images/trailer.png" />
+        <p></p>
+        <button></button>
+      </article>
+      <article>
+        <h2></h2>
+        <img src="./images/trailer.png" />
+        <p></p>
+        <button></button>
+      </article>
+      <article>
+        <h2></h2>
+        <img src="./images/trailer.png" />
+        <p></p>
+        <button></button>
+      </article>
+      <article>
+        <h2></h2>
+        <img src="./images/trailer.png" />
+        <p></p>
+        <button></button>
+      </article>
+      <article>
+        <h2></h2>
+        <img src="./images/trailer.png" />
+        <p></p>
+        <button></button>
+      </article>
+      <article>
+        <h2></h2>
+        <img src="./images/trailer.png" />
+        <p></p>
+        <button></button>
+      </article>
+      <article>
+        <h2></h2>
+        <img src="./images/trailer.png" />
+        <p></p>
+        <button></button>
+      </article>
+      <button></button>
+    </main>
     <script src="./scripts/like.js"></script>
   </body>
 </html>
