--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             loading="lazy"
             class="card_image"
           />
-          <span class="card_label">&lt/HTML&gt</span>
+          <span class="card_label">&lt;/HTML&gt;</span>
         </div>
 
         <div class="container_description">
@@ -91,7 +91,7 @@
             loading="lazy"
             class="card_image img_fear"
           />
-          <span class="card_label">&ltOMG&gt</span>
+          <span class="card_label">&lt;OMG&gt;</span>
         </div>
 
         <div class="container_description">
@@ -155,7 +155,7 @@
             loading="lazy"
             class="card_image img_luck"
           />
-          <span class="card_label">&ltWOW&gt</span>
+          <span class="card_label">&lt;WOW&gt;</span>
         </div>
 
         <div class="container_description">
@@ -217,7 +217,7 @@
             loading="lazy"
             class="card_image img_ideal"
           />
-          <span class="card_label">&ltPERFECT&gt</span>
+          <span class="card_label">&lt;PERFECT&gt;</span>
         </div>
 
         <div class="container_description">
@@ -281,7 +281,7 @@
             loading="lazy"
             class="card_image img_environment"
           />
-          <span class="card_label">&ltLOVE&gt</span>
+          <span class="card_label">&lt;LOVE&gt;</span>
         </div>
 
         <div class="container_description">
@@ -346,7 +346,7 @@
             loading="lazy"
             class="card_image img_solution"
           />
-          <span class="card_label">&ltSLEEP&gt</span>
+          <span class="card_label">&lt;SLEEP&gt;</span>
         </div>
 
         <div class="container_description">
@@ -406,7 +406,7 @@
             loading="lazy"
             class="card_image img_concentration"
           />
-          <span class="card_label">&ltOK&gt</span>
+          <span class="card_label">&lt;OK&gt;</span>
         </div>
 
         <div class="container_description">
@@ -470,7 +470,7 @@
             loading="lazy"
             class="card_image img_end"
           />
-          <span class="card_label">&ltOH NO&gt</span>
+          <span class="card_label">&lt;OH NO&gt;</span>
         </div>
 
         <div class="container_description">
@@ -531,7 +531,7 @@
         class="save_button"
         type="button"
         onclick="window['dialog_discetta'].showModal()"
-        aria-controls="Открытие модального окна"
+        aria-controls="dialog_discetta"
       >
         <svg class="discetta" viewBox="0 0 21 21">
           <use href="./svg/image.svg#discetta"></use>
@@ -548,7 +548,7 @@
           class="dialog_button"
           type="button"
           onclick="window['dialog_discetta'].close()"
-          aria-controls="Закрытие модального окна"
+          aria-controls="dialog_discetta"
         >
           <span class="button__text">OK</span>
         </button>
