Change block-size dialog

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body class="page">
     <header class="header">
-      <a class="header_logo">&lt/HTML&gt</a>
+      <a class="header_logo">&lt;/HTML&gt;</a>
       <h1 class="header_title">закрывающий тег</h1>
     </header>
 
