--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             loading="lazy"
             class="card_image"
           />
-          <span class="card_label">&lt;/HTML&gt;</span>
+          <span class="card_label" aria-hidden="true">&lt;/HTML&gt;</span>
         </div>
 
         <div class="container_description">
@@ -91,7 +91,7 @@
             loading="lazy"
             class="card_image img_fear"
           />
-          <span class="card_label">&lt;OMG&gt;</span>
+          <span class="card_label" aria-hidden="true">&lt;OMG&gt;</span>
         </div>
 
         <div class="container_description">
@@ -155,7 +155,7 @@
             loading="lazy"
             class="card_image img_luck"
           />
-          <span class="card_label">&lt;WOW&gt;</span>
+          <span class="card_label" aria-hidden="true">&lt;WOW&gt;</span>
         </div>
 
         <div class="container_description">
@@ -217,7 +217,7 @@
             loading="lazy"
             class="card_image img_ideal"
           />
-          <span class="card_label">&lt;PERFECT&gt;</span>
+          <span class="card_label" aria-hidden="true">&lt;PERFECT&gt;</span>
         </div>
 
         <div class="container_description">
@@ -281,7 +281,7 @@
             loading="lazy"
             class="card_image img_environment"
           />
-          <span class="card_label">&lt;LOVE&gt;</span>
+          <span class="card_label" aria-hidden="true">&lt;LOVE&gt;</span>
         </div>
 
         <div class="container_description">
@@ -346,7 +346,7 @@
             loading="lazy"
             class="card_image img_solution"
           />
-          <span class="card_label">&lt;SLEEP&gt;</span>
+          <span class="card_label" aria-hidden="true">&lt;SLEEP&gt;</span>
         </div>
 
         <div class="container_description">
@@ -406,7 +406,7 @@
             loading="lazy"
             class="card_image img_concentration"
           />
-          <span class="card_label">&lt;OK&gt;</span>
+          <span class="card_label" aria-hidden="true">&lt;OK&gt;</span>
         </div>
 
         <div class="container_description">
@@ -470,7 +470,7 @@
             loading="lazy"
             class="card_image img_end"
           />
-          <span class="card_label">&lt;OH NO&gt;</span>
+          <span class="card_label" aria-hidden="true">&lt;OH NO&gt;</span>
         </div>
 
         <div class="container_description">
