--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <p class="card_text">Было страшно!(страшно интересно)</p>
 
           <div class="container_btn">
-            <button class="card__icon-button">
+            <button class="card__icon-button" type="button" aria-label="Поставить лайк">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="39"
@@ -51,6 +51,7 @@
                 fill="none"
                 viewBox="0 0 39 36"
                 class="like-icon"
+                aria-hidden="true"
               >
                 <g class="heart">
                   <path
@@ -75,7 +76,7 @@
               </svg>
             </button>
 
-            <button class="card__like-button">
+            <button class="card__like-button button" type="button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -89,7 +90,7 @@
             src="./images/trailer.png"
             alt="Трейлер в лесу"
             loading="lazy"
-            class="card_image img_fear"
+            class="card_image filter-grayscale"
           />
           <span class="card_label" aria-hidden="true">&lt;OMG&gt;</span>
         </div>
@@ -107,7 +108,8 @@
           </p>
 
           <div class="container_btn">
-            <button class="card__icon-button">
+            <button class="card__icon-button"
+            type="button" aria-label="Поставить лайк">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="39"
@@ -115,6 +117,7 @@
                 fill="none"
                 viewBox="0 0 39 36"
                 class="like-icon"
+                aria-hidden="true"
               >
                 <g class="heart">
                   <path
@@ -139,7 +142,7 @@
               </svg>
             </button>
 
-            <button class="card__like-button">
+            <button class="card__like-button button" type="button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -153,7 +156,7 @@
             src="./images/trailer.png"
             alt="Трейлер в лесу"
             loading="lazy"
-            class="card_image img_luck"
+            class="card_image filter-saturate"
           />
           <span class="card_label" aria-hidden="true">&lt;WOW&gt;</span>
         </div>
@@ -169,7 +172,7 @@
           </p>
 
           <div class="container_btn">
-            <button class="card__icon-button">
+            <button class="card__icon-button" type="button" aria-label="Поставить лайк">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="39"
@@ -177,6 +180,7 @@
                 fill="none"
                 viewBox="0 0 39 36"
                 class="like-icon"
+                aria-hidden="true"
               >
                 <g class="heart">
                   <path
@@ -201,7 +205,7 @@
               </svg>
             </button>
 
-            <button class="card__like-button">
+            <button class="card__like-button button" type="button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -215,7 +219,7 @@
             src="./images/trailer.png"
             alt="Трейлер в лесу"
             loading="lazy"
-            class="card_image img_ideal"
+            class="card_image filter-hue-rotate"
           />
           <span class="card_label" aria-hidden="true">&lt;PERFECT&gt;</span>
         </div>
@@ -233,7 +237,7 @@
           </p>
 
           <div class="container_btn">
-            <button class="card__icon-button">
+            <button class="card__icon-button" type="button" aria-label="Поставить лайк">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="39"
@@ -241,6 +245,7 @@
                 fill="none"
                 viewBox="0 0 39 36"
                 class="like-icon"
+                aria-hidden="true"
               >
                 <g class="heart">
                   <path
@@ -265,7 +270,7 @@
               </svg>
             </button>
 
-            <button class="card__like-button">
+            <button class="card__like-button button" type="button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -279,7 +284,7 @@
             src="./images/trailer.png"
             alt="Трейлер в лесу"
             loading="lazy"
-            class="card_image img_environment"
+            class="card_image filter-invert"
           />
           <span class="card_label" aria-hidden="true">&lt;LOVE&gt;</span>
         </div>
@@ -298,7 +303,7 @@
           </p>
 
           <div class="container_btn">
-            <button class="card__icon-button">
+            <button class="card__icon-button" type="button" aria-label="Поставить лайк">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="39"
@@ -306,6 +311,7 @@
                 fill="none"
                 viewBox="0 0 39 36"
                 class="like-icon"
+                aria-hidden="true"
               >
                 <g class="heart">
                   <path
@@ -330,7 +336,7 @@
               </svg>
             </button>
 
-            <button class="card__like-button">
+            <button class="card__like-button button" type="button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -344,7 +350,7 @@
             src="./images/trailer.png"
             alt="Трейлер в лесу"
             loading="lazy"
-            class="card_image img_solution"
+            class="card_image filter-sepia"
           />
           <span class="card_label" aria-hidden="true">&lt;SLEEP&gt;</span>
         </div>
@@ -358,7 +364,7 @@
           <p class="card_text">Сон всегда помогает решить трудную задачую</p>
 
           <div class="container_btn">
-            <button class="card__icon-button">
+            <button class="card__icon-button" type="button" aria-label="Поставить лайк">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="39"
@@ -366,6 +372,7 @@
                 fill="none"
                 viewBox="0 0 39 36"
                 class="like-icon"
+                aria-hidden="true"
               >
                 <g class="heart">
                   <path
@@ -390,7 +397,7 @@
               </svg>
             </button>
 
-            <button class="card__like-button">
+            <button class="card__like-button button" type="button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -404,7 +411,7 @@
             src="./images/trailer.png"
             alt="Трейлер в лесу"
             loading="lazy"
-            class="card_image img_concentration"
+            class="card_image filter-blur"
           />
           <span class="card_label" aria-hidden="true">&lt;OK&gt;</span>
         </div>
@@ -422,7 +429,7 @@
           </p>
 
           <div class="container_btn">
-            <button class="card__icon-button">
+            <button class="card__icon-button" type="button" aria-label="Поставить лайк">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="39"
@@ -430,6 +437,7 @@
                 fill="none"
                 viewBox="0 0 39 36"
                 class="like-icon"
+                aria-hidden="true"
               >
                 <g class="heart">
                   <path
@@ -454,7 +462,7 @@
               </svg>
             </button>
 
-            <button class="card__like-button">
+            <button class="card__like-button button" type="button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -468,7 +476,7 @@
             src="./images/trailer.png"
             alt="Трейлер в лесу"
             loading="lazy"
-            class="card_image img_end"
+            class="card_image filter-multy"
           />
           <span class="card_label" aria-hidden="true">&lt;OH NO&gt;</span>
         </div>
@@ -488,7 +496,7 @@
           </p>
 
           <div class="container_btn">
-            <button class="card__icon-button">
+            <button class="card__icon-button" type="button" aria-label="Поставить лайк">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="39"
@@ -496,6 +504,7 @@
                 fill="none"
                 viewBox="0 0 39 36"
                 class="like-icon"
+                aria-hidden="true"
               >
                 <g class="heart">
                   <path
@@ -520,7 +529,7 @@
               </svg>
             </button>
 
-            <button class="card__like-button">
+            <button class="card__like-button button" type="button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -528,7 +537,7 @@
       </article>
 
       <button
-        class="save_button"
+        class="save_button button"
         type="button"
         onclick="window['dialog_discetta'].showModal()"
         aria-controls="dialog_discetta"
@@ -545,12 +554,12 @@
         </svg>
         <h3 class="dialog__text">Вставьте дискету, чтобы продолжить</h3>
         <button
-          class="dialog_button"
+          class="dialog_button button"
           type="button"
           onclick="window['dialog_discetta'].close()"
           aria-controls="dialog_discetta"
         >
-          <span class="button__text">OK</span>
+          <span class="button__text">ok</span>
         </button>
       </dialog>
     </main>
